reworked buildings, fixed crowded building centers